manifests/bifrost-web.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bifrost-web
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: bifrost-web
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bifrost-web
    spec:
      containers:
      - name: bifrost-web
        image: alpetest/mybifrostweb:latest
        imagePullPolicy: Always
        ports:
        - name: web
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /web/conf
          name: bifrost-web-conf-volume
        lifecycle:
          preStop:
            exec:
              # SIGTERM triggers a quick exit; gracefully terminate instead
              command: ["/usr/sbin/nginx","-s","quit"]
        livenessProbe:
          httpGet:
            path: /
            port: web
            httpHeaders:
            - name: X-Custom-Header
              value: heathcheck
          initialDelaySeconds: 1
          periodSeconds: 10
        resources:
          limits:
            memory: 64Mi
            cpu: 150m
          requests:
            memory: 64Mi
            cpu: 100m
      volumes:
      - name: bifrost-web-conf-volume
        configMap:
          defaultMode: 420
          name: bifrost-web-conf
      terminationGracePeriodSeconds: 10
---

apiVersion: v1
kind: Service
metadata:
  name: bifrost-web
  labels:
    app: bifrost-web
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8080
  selector:
    app: bifrost-web
