manifests/bitcoin-core.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: bitcoin-core
  labels:
    app: bitcoin-core
spec:
  serviceName: bitcoin-core
  replicas: 1
  template:
    metadata:
      labels:
        app: bitcoin-core
    spec:
      terminationGracePeriodSeconds: 10
      securityContext:
        fsGroup: 1000
      containers:
      - name: bitcoin-core
        args:
          - '-printtoconsole'
          - '-rpcallowip=0.0.0.0/0'
          - '-rpcuser=foo'
          - '-rpcpassword=bar'
          - '-testnet'
        image: ruimarinho/bitcoin-core:0.15.1-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - name: rpc-testnet
          containerPort: 18332
          protocol: TCP
        volumeMounts:
          - mountPath: /home/bitcoin/.bitcoin/
            name: bitcoin-storage-volume
        resources:
          limits:
            memory: 2Gi
            cpu: 300m
          requests:
            memory: 1.5Gi
            cpu: 250m
  volumeClaimTemplates:
    - metadata:
        name: bitcoin-storage-volume
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: standard
        resources:
          requests:
            storage: 20Gi

---
apiVersion: v1
kind: Service
metadata:
  name: bitcoin-core
  labels:
    app: bitcoin-core
spec:
  type: ClusterIP
  ports:
  - port: 18332
  selector:
    app: bitcoin-core
