manifests/postgres.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  serviceName: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      terminationGracePeriodSeconds: 10
      securityContext:
        fsGroup: 1000
      containers:
      - name: postgresql
        image: postgres:10-alpine
        imagePullPolicy: IfNotPresent
        ports:
          - name: posgres
            containerPort: 5432
            protocol: TCP
        volumeMounts:
          - mountPath: /var/lib/postgresql/data/
            name: postgres-storage-volume
        resources:
          limits:
            memory: 512Mi
            cpu: 200m
          requests:
            memory: 256Mi
            cpu: 100m
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage-volume
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: fast
        resources:
          requests:
            storage: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
  - port: 5432
  selector:
    app: postgres
