manifests/bifrost-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bifrost
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: api.bifrost-demo.alpe1.com
    http:
      paths:
      - backend:
          serviceName: bifrost
          servicePort: 8000
